tests/ui/enum-discriminant/arbitrary_enum_discriminant-no-repr.stderr
error[E0732]: `#[repr(inttype)]` must be specified
  --> $DIR/arbitrary_enum_discriminant-no-repr.rs:3:1
   |
LL | enum Enum {
   | ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0732`.
